# pipeline-common

./: .bumpversion.cfg  .gitignore  README.md  helper.sh  requirements.txt  setup.cfg
.github/workflows/: release.yml
src/tgedr/pipeline/common/: common.py  factory.py  sink.py  source.py
src/tgedr/pipeline/common/impl/: dummy.py
test/: test_factory.py
