[metadata]
name = tgedr-pipeline-common
version = 0.1.5
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/pipeline-common
description = This package provides interfaces to the pipeline set of packages
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find:
install_requires =
    configlookup
    pytest

[options.packages.find]
where=src
